<resources>
    <string name="app_name">Happy Life</string>
    <string name="aanandam">Aanandam</string>
    <string name="get_started">Get Started</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="create_account">Create Account</string>
    <string name="username">username</string>
    <string name="your_profile">Your Profile</string>
    <string name="full_name">Full Name</string>
    <string name="speciality">Speciality</string>
    <string name="experienced">Experienced</string>
    <string name="city">City :</string>
    <string name="about_yourself">About yourself :</string>
    <string name="contact_no">Contact no.</string>
    <string name="qualification">Qualification :</string>
    <string name="save">Save</string>
    <string name="hriday_jain">Hriday Jain</string>
    <string name="pyschologist">pyschologist</string>
    <string name="psycologist">psycologist</string>
    <string name="speciality_pyschologist">Speciality : pyschologist</string>
    <string name="experience_8yrs">Experience : 8yrs</string>
    <string name="qualification_msc">Qualification : Msc</string>
    <string name="about_you">about you</string>
    <string name="contact_9425144877">Contact : 9425144877</string>
    <string name="no_doc">no doctors</string>
    <string name="happy_life_clinic">Happy Life Clinic</string>
    <string name="happy_life">Happy Life</string>
    <string name="clinc">Clinic</string>
    <string name="a_complete_wellness_clinic">A Complete Wellness Clinic</string>
    <string name="get_started_new">Get Started</string>
    <string name="search">Search</string>
    <string name="sign_out">Sign out</string>
    <string name="doctor_s_list">Doctor\'s list</string>
    <string name="forgot_password">forgot password</string>
    <string name="ahmedabad">Ahmedabad</string>
</resources>
