<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/shape"
    android:layout_height="match_parent"
    tools:context=".Doctor_login">
    <ProgressBar
        android:id="@+id/progress_bar_patientlogin"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <AutoCompleteTextView
            android:id="@+id/enter_email_patient_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>
        <EditText
            android:id="@+id/enter_password_patient_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/password"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:id="@+id/patientforgot_button"
            android:layout_width="150dp"
            android:layout_marginStart="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colormaroon"
            android:background="@android:color/transparent"/>
        <Button
            android:id="@+id/patientlogin_button"
            android:layout_width="150dp"
            android:layout_marginStart="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/login"
            android:textColor="@color/colormaroon"
            android:background="@android:color/transparent"/>
    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/or"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            style="bold"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/patientcreate_account"
            android:layout_marginTop="15dp"
            android:text="@string/create_account"
            android:textColor="@color/colormaroon"
            android:background="@android:color/transparent"/>


    </LinearLayout></LinearLayout>