<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/shape"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".doctor_profile">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:id="@+id/Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/alegreya_sans_bold_italic"
                android:text="@string/your_profile"
                android:textColor="#0B0A0A"
                android:textSize="50sp"
                android:textStyle="italic"
                android:layout_marginStart="55dp" />
            <RelativeLayout
                android:layout_width="350dp"
                android:layout_height="250dp"
                android:layout_marginTop="20sp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/doctor_image"
                    android:id="@+id/image_platform"/>
                <ImageView
                    android:layout_width="143dp"
                    android:layout_height="99dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@android:drawable/ic_menu_camera"
                    android:id="@+id/load_image"/>
            </RelativeLayout>
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/full_name"
                android:layout_marginTop="40dp"
                android:layout_marginStart="20sp"
                android:background="@drawable/line_bg"
                android:inputType="textPersonName"/>
            <EditText
                android:id="@+id/speciality"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/speciality"
                android:layout_marginTop="40dp"
                android:layout_marginStart="20sp"
                android:background="@drawable/line_bg"
                android:inputType="text"/>
            <EditText
                android:id="@+id/qualification"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/qualification"
                android:layout_marginTop="40dp"
                android:layout_marginStart="20sp"
                android:background="@drawable/line_bg"
                android:inputType="text"/>
            <EditText
                android:id="@+id/experience"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/experienced"
                android:layout_marginTop="40dp"
                android:layout_marginStart="20sp"
                android:background="@drawable/line_bg"
                android:inputType="text"/>
            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/city"
                android:layout_marginTop="40dp"
                android:layout_marginStart="20sp"
                android:background="@drawable/line_bg"
                android:inputType="text"/>
            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/contact_no"
                android:layout_marginTop="40dp"
                android:layout_marginStart="20sp"
                android:background="@drawable/line_bg"
                android:inputType="number"/>
            <EditText
                android:id="@+id/about_you"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/about_yourself"
                android:layout_marginTop="40dp"
                android:layout_marginStart="20sp"
                android:background="@drawable/line_bg"
                android:inputType="textMultiLine"/>

            <ProgressBar
                android:id="@+id/doctor_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"/>
            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="40dp"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/save"/>

        </LinearLayout>



    </ScrollView>

</LinearLayout>