<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".doctor_info">
    <ScrollView android:background="@drawable/shape"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">



            <ImageView
                android:layout_marginTop="40dp"
                android:id="@+id/imageView_doc_pro"
                android:layout_width="268dp"
                android:layout_height="229dp"
                android:layout_gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/doctor" />
            <TextView
                android:id="@+id/doc_name_pro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hriday_jain"
                android:textSize="50sp"
                android:layout_marginTop="40dp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:id="@+id/doc_speciality_pro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speciality_pyschologist"
                android:layout_marginStart="30dp"
                android:layout_marginTop="35sp"
                android:textSize="30sp"/>
            <TextView
                android:id="@+id/doc_experience_pro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/experience_8yrs"
                android:layout_marginStart="30dp"
                android:layout_marginTop="35sp"
                android:textSize="30sp"/>
            <TextView
                android:id="@+id/doc_qualification_pro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qualification_msc"
                android:layout_marginStart="30dp"
                android:layout_marginTop="35sp"
                android:textSize="30sp"/>
            <TextView
                android:id="@+id/doc_about_pro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_you"
                android:inputType="textMultiLine"
                android:layout_marginStart="30dp"
                android:layout_marginTop="35sp"
                android:textSize="30sp"
                tools:ignore="TextViewEdits" />
            <TextView
                android:id="@+id/doc_contact_pro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_9425144877"
                android:inputType="textMultiLine"
                android:layout_marginStart="30dp"
                android:layout_marginTop="35sp"
                android:textSize="30sp"
                tools:ignore="TextViewEdits" />


        </LinearLayout>

</ScrollView>
</LinearLayout>
