<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:background="@drawable/shape"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".doctorcreate_account">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/progress_bar"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/doctor_username"
            android:hint="@string/username"
            android:maxLines="1"
            android:inputType="textPersonName"/>
        <AutoCompleteTextView
            android:id="@+id/doctor_email"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>
        <EditText
            android:id="@+id/doctor_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/password"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/doctorcreate_accountfinal"
            android:layout_marginTop="15dp"
            android:text="@string/create_account"
            android:textColor="@color/colormaroon"
            android:background="@android:color/transparent"/>
    </LinearLayout></LinearLayout>