<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:padding="4dp"
    app:cardElevation="20dp"
    app:cardCornerRadius="10dp"
    android:elevation="8dp">
    <LinearLayout
        android:background="@color/colorfirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp"
        android:elevation="8dp">
        <ImageView
            android:id="@+id/doctor_pic_card"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:src="@drawable/doctor_image"
            android:scaleType="fitXY"
            android:cropToPadding="true"
            android:adjustViewBounds="true"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/doctor_name_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/hriday_jain"
                android:textSize="40sp" />
            <TextView
                android:id="@+id/doctor_speciality_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pyschologist"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/doctor_location_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ahmedabad"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>


        
    </LinearLayout>
</androidx.cardview.widget.CardView>

